<resources>
    <string name="app_name" translatable="false">uTerm</string>
    <string name="cmd_1_btn_hint">run cmd 1</string>
    <string name="cmd_1_et_hint">Command 1</string>
    <string name="cmd_2_btn_hint">run cmd 2</string>
    <string name="cmd_2_et_hint">Command 2</string>
    <string name="sample_status_text">(TEST) status: connected - BT100</string>
    <string name="bt_enabled">Bluetooth has been enabled</string>
    <string name="bt_disabled">Bluetooth has been disabled</string>
    <string name="bt_enabling_cancel">Bluetooth enabling has been canceled</string>
    <string name="bt_no_devices_found">no paired bluetooth devices found</string>
    <string name="bt_not_supported">this device does not support bluetooth</string>
    <string name="settings">Settings</string>
    <string name="save_json">Save as JSON</string>
    <string name="open_json">Open JSON file</string>
    <string name="clear_terminal">Clear console</string>
    <string name="connection">Connection</string>
    <string name="btn_refresh">refresh</string>
    <string name="btn_disconnect">disconnect</string>
    <string name="status_connected">connected</string>
    <string name="status_not_connected">not connected</string>
    <string name="status">status:</string>
    <string name="connect_connected_full">You are succesfull connected to the device</string>
    <string name="bluetooth_doesnt_work">Bluetooth doesn\'t work</string>
    <string name="no_devices_found">No devices found</string>
    <string name="bluetooth_activated">Bluetooth aktivated</string>
    <string name="bluetooth_deactivated">Bluetooth deactivated</string>
    <string name="bluetooth_activation_cancel">Bluetooth activation cancelled</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
</resources>