<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/connect"
        android:icon="@drawable/ic_baseline_bluetooth_24"
        android:title="@string/connection"
        app:showAsAction="always"/>
    <item
        android:id="@+id/disconnect"
        android:title="@string/disconnect"
        android:enabled="false" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:enabled="false" />
    <item
        android:id="@+id/save"
        android:title="@string/save_json"
        android:enabled="false"/>
    <item
        android:id="@+id/open"
        android:title="@string/open_json"
        android:enabled="false"/>
    <item
        android:id="@+id/clear"
        android:title="@string/clear_terminal"/>
</menu>